# currency_rates

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
src/: main.py
src/api/v1/: currency_rates.py
src/core/: dependencies.py  logging.py  settings.py
src/db/: db.py
src/domain/: __init__.py  base.py  currency_rates.py
src/exceptions/: currency_rates.py
src/migrations/: env.py
src/migrations/versions/: 3498d9c02b5f_02_rates_unique_constraint.py  75e93b8b8d0e_02_currency_rates.py  a6718854db5b_01_initial_db.py
src/repositories/: currency_rates.py
src/schemas/: base.py  currency_rates.py
src/services/: currency_rates.py
src/tests/: conftest.py  helpers.py
src/tests/integration/: test_repositories.py  test_routes.py
src/tests/unit/: test_services.py
